pushing changes to repository

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ title: About
 ## About
 
 Thanks for dropping by. I actually started this site to report progress on a university course for Git,
-we´re on week called semana I, a new inititive of ITESM. I´m a software enginneer currently on my last
+we´re on week called semana I, a new initiative of ITESM. I´m a software enginneer currently on my last
 year of the bachelor, I´m also working as a Dev 2 in Oracle MDC in a project called Genetic Bug, mostly
 doing the web appliance system for it, we use Ruby and Rails for the backend and Ember.js for the
 frontend.
